--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 @media print {
   /* Eliminar cabeceras y pies de página del navegador (URL, Fecha, etc) */
   @page {
-    size: auto;
+    size: 14.8cm 25.4cm;
     margin: 0mm;
   }
 
@@ -76,7 +76,9 @@ body {
     page-break-after: always !important;
     break-after: page !important;
     position: relative !important;
-    min-height: 10cm; /* Altura mínima estimada de una tarjeta física */
+    width: 14.8cm !important;
+    height: 25.4cm !important;
+    min-height: 25.4cm !important;
   }
 
   .mode-preprinted .header-section,
